--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title lang="en">WebStudio #6</title>
+	<title lang="en">WebStudio #7</title>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,33 +25,34 @@
 
 <body>
 	<header class="header">
-		<div class="container header-flex">
-			<nav class="header-nav">
-				<a class="logo-link" href="./index.html" lang="en">Web<span>Studio</span></a>
-				<ul class="nav-list">
-					<li class="nav-item">
-						<a class="nav-link link current" href="./index.html">Студія</a>
+		<div class="container header__container">
+			<nav class="nav">
+				<a class="logo header__logo" href="./index.html" lang="en">Web<span
+						class="logo__span logo__span--black">Studio</span></a>
+				<ul class="nav__list">
+					<li class="nav__item">
+						<a class="link nav__link  link--current" href="./index.html">Студія</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link link" href="./portfolio.html">Портфоліо</a>
+					<li class="nav__item">
+						<a class="link nav__link" href="./portfolio.html">Портфоліо</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link link" href="#">Контакти</a>
+					<li class="nav__item">
+						<a class="link nav__link" href="#">Контакти</a>
 					</li>
 				</ul>
 			</nav>
-			<ul class="header-list">
-				<li class="header-item">
-					<a class="header-link link" href="mailto:info@devstudio.com" lang="en">
-						<svg class="icon-mail" width="16" height="12">
+			<ul class="contacts">
+				<li class="contacts__item">
+					<a class="contacts__link link" href="mailto:info@devstudio.com" lang="en">
+						<svg class="contacts__icon" width="16" height="12">
 							<use href="./images/icons.svg#icon-envelope"></use>
 						</svg>
 						info@devstudio.com
 					</a>
 				</li>
-				<li class="header-item">
-					<a class="header-link link" href="tel:+380961111111">
-						<svg class="icon-phone" width="10" height="16">
+				<li class="contacts__item">
+					<a class="contacts__link link" href="tel:+380961111111">
+						<svg class="contacts__icon" width="10" height="16">
 							<use href="./images/icons.svg#icon-smartphone"></use>
 						</svg>
 						+38 096 111 11 11
@@ -358,7 +359,7 @@
 	<footer class="footer">
 		<div class="container footer-wrapper">
 			<div class="footer-contacts">
-				<a class="logo-link" href="./index.html" lang="en">Web<span>Studio</span></a>
+				<a class="logo" href="./index.html" lang="en">Web<span>Studio</span></a>
 				<address class="footer-address">
 					<ul class="footer-list">
 						<li class="footer-item">
@@ -451,7 +452,7 @@
 					<div class="input-wrapper">
 						<input class="form-input" type="tel" name="tel">
 						<svg class="form-icon" width="18" height="18">
-							<use href="./images/icons.svg#icon-phone-form"></use>
+							<use href="./images/icons.svg#contacts__icon-form"></use>
 						</svg>
 					</div>
 				</label>
