--- a/portfolio.html
+++ b/portfolio.html
@@ -24,33 +24,34 @@
 
 <body>
 	<header class="header">
-		<div class="container header-flex">
-			<nav class="header-nav">
-				<a class="logo-link black" href="./index.html" lang="en">Web<span>Studio</span></a>
-				<ul class="nav-list">
-					<li class="nav-item">
-						<a class="nav-link link" href="./index.html">Студія</a>
+		<div class="container header__container">
+			<nav class="nav">
+				<a class="logo header__logo" href="./index.html" lang="en">Web<span
+						class="logo__span logo__span--black">Studio</span></a>
+				<ul class="nav__list">
+					<li class="nav__item">
+						<a class="nav__link link" href="./index.html">Студія</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link link current" href="./portfolio.html">Портфоліо</a>
+					<li class="nav__item">
+						<a class="nav__link link link--current" href="./portfolio.html">Портфоліо</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link link" href="#">Контакти</a>
+					<li class="nav__item">
+						<a class="nav__link link" href="#">Контакти</a>
 					</li>
 				</ul>
 			</nav>
-			<ul class="header-list">
-				<li class="header-item">
-					<a class="header-link link" href="mailto:info@devstudio.com" lang="en">
-						<svg class="icon-mail" width="16" height="12">
+			<ul class="contacts">
+				<li class="contacts__item">
+					<a class="contacts__link link" href="mailto:info@devstudio.com" lang="en">
+						<svg class="contacts__icon" width="16" height="12">
 							<use href="./images/icons.svg#icon-envelope"></use>
 						</svg>
 						info@devstudio.com
 					</a>
 				</li>
-				<li class="header-item">
-					<a class="header-link link" href="tel:+380961111111">
-						<svg class="icon-phone" width="10" height="16">
+				<li class="contacts__item">
+					<a class="contacts__link link" href="tel:+380961111111">
+						<svg class="contacts__icon" width="10" height="16">
 							<use href="./images/icons.svg#icon-smartphone"></use>
 						</svg>
 						+38 096 111 11 11
@@ -279,7 +280,7 @@
 	<footer class="footer">
 		<div class="container footer-wrapper">
 			<div class="footer-contacts">
-				<a class="logo-link" href="./index.html" lang="en">Web<span>Studio</span></a>
+				<a class="logo" href="./index.html" lang="en">Web<span>Studio</span></a>
 				<address class="footer-address">
 					<ul class="footer-list">
 						<li class="footer-item">
