--- a/portfolio.html
+++ b/portfolio.html
@@ -302,31 +302,31 @@
 			</div>
 			<div class="footer-social">
 				<p class="social-title">приєднуйтесь</p>
-				<ul class="footer-social-list">
-					<li class="footer-social-item">
-						<a class="footer-social-link" href="#" rel="noopener noreferrer nofollow">
-							<svg class="footer-social-icon" width="20" height="20">
+				<ul class="footer-social">
+					<li class="footer-social__item">
+						<a class="footer-social__link" href="#" rel="noopener noreferrer nofollow">
+							<svg class="footer-social__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-instagram"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="footer-social-item">
-						<a class="footer-social-link" href="#" rel="noopener noreferrer nofollow">
-							<svg class="footer-social-icon" width="20" height="20">
+					<li class="footer-social__item">
+						<a class="footer-social__link" href="#" rel="noopener noreferrer nofollow">
+							<svg class="footer-social__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-twitter"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="footer-social-item">
-						<a class="footer-social-link" href="#" rel="noopener noreferrer nofollow">
-							<svg class="footer-social-icon" width="20" height="20">
+					<li class="footer-social__item">
+						<a class="footer-social__link" href="#" rel="noopener noreferrer nofollow">
+							<svg class="footer-social__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-facebook"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="footer-social-item">
-						<a class="footer-social-link" href="#" rel="noopener noreferrer nofollow">
-							<svg class="footer-social-icon" width="20" height="20">
+					<li class="footer-social__item">
+						<a class="footer-social__link" href="#" rel="noopener noreferrer nofollow">
+							<svg class="footer-social__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-linkedin"></use>
 							</svg>
 						</a>
