--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
+		crossorigin="anonymous" referrerform__policy="no-referrer" />
 
 	<link rel="stylesheet" href="./css/nullstyle.css">
 
@@ -317,42 +317,42 @@
 			<div class="container">
 				<h2 class="clients__title">Постійні клієнти</h2>
 				<ul class="clients__list">
-					<li class="clients-item">
+					<li class="clients__item">
 						<a class="clients__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="clients__logo" width="106" height="60">
 								<use href="./images/icons.svg#icon-logo-1"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="clients-item">
+					<li class="clients__item">
 						<a class="clients__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="clients__logo" width="106" height="60">
 								<use href="./images/icons.svg#icon-logo-2"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="clients-item">
+					<li class="clients__item">
 						<a class="clients__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="clients__logo" width="106" height="60">
 								<use href="./images/icons.svg#icon-logo-3"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="clients-item">
+					<li class="clients__item">
 						<a class="clients__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="clients__logo" width="106" height="60">
 								<use href="./images/icons.svg#icon-logo-4"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="clients-item">
+					<li class="clients__item">
 						<a class="clients__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="clients__logo" width="106" height="60">
 								<use href="./images/icons.svg#icon-logo-5"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="clients-item">
+					<li class="clients__item">
 						<a class="clients__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="clients__logo" width="106" height="60">
 								<use href="./images/icons.svg#icon-logo-6"></use>
@@ -365,31 +365,32 @@
 	</main>
 
 	<footer class="footer">
-		<div class="container footer-wrapper">
+		<div class="container footer__container">
 			<div class="footer-contacts">
-				<a class="logo" href="./index.html" lang="en">Web<span>Studio</span></a>
-				<address class="footer-address">
-					<ul class="footer-list">
-						<li class="footer-item">
-							<a class="footer-map-address link" href="https://goo.gl/maps/5xT6Rg2jsyuAcH8N7"
+				<a class="logo footer__logo" href="./index.html" lang="en">Web<span
+						class="logo__span logo__span--white">Studio</span></a>
+				<address class="address">
+					<ul class="address-list">
+						<li class="address__item">
+							<a class="address__map-link link" href="https://goo.gl/maps/5xT6Rg2jsyuAcH8N7"
 								target="_blank" rel="noopener noreferrer nofollow">
 								м. Київ, пр-т Лесі Українки, 26
 							</a>
 						</li>
-						<li class="footer-item">
-							<a class="footer-link link" href="mailto:info@devstudio.com" lang="en">
+						<li class="address__item">
+							<a class="address__link link" href="mailto:info@devstudio.com" lang="en">
 								info@devstudio.com
 							</a>
 						</li>
-						<li class="footer-item">
-							<a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+						<li class="address__item">
+							<a class="address__link link" href="tel:+380961111111">+38 096 111 11 11</a>
 						</li>
 					</ul>
 				</address>
 			</div>
 			<div class="footer-social">
-				<p class="social-title">приєднуйтесь</p>
-				<ul class="footer-social">
+				<p class="footer-social__title">приєднуйтесь</p>
+				<ul class="footer-social__list">
 					<li class="footer-social__item">
 						<a class="footer-social__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="footer-social__icon" width="20" height="20">
@@ -421,12 +422,12 @@
 				</ul>
 			</div>
 			<form class="footer-form" autocomplete="off">
-				<p class="footer-title">Підпишіться на розсилку</p>
+				<p class="footer-form__title">Підпишіться на розсилку</p>
 				<div class="form-wrapper">
-					<input class="footer-email" type="email" name="email" placeholder="E-mail">
-					<button class="footer-form-btn" type="submit">
-						<span>Підписатися</span>
-						<svg class="icon-send" width="24" height="24">
+					<input class="footer-form__input" type="email" name="email" placeholder="E-mail">
+					<button class="footer-form__btn" type="submit">
+						<span class="footer-form__span">Підписатися</span>
+						<svg class="footer-form__icon" width="24" height="24">
 							<use href="./images/icons.svg#icon-send"></use>
 						</svg>
 					</button>
@@ -435,63 +436,63 @@
 		</div>
 	</footer>
 
-	<div class="backdrop is-hidden" data-modal>
+	<div class="backdrop backdrop--is-hidden" data-modal>
 		<div class="modal">
-			<button class="modal-close-btn" type="button" data-modal-close>
-				<svg class="modal-close" width="18" height="18">
+			<button class="modal__close-btn" type="button" data-modal-close>
+				<svg class="modal__close" width="18" height="18">
 					<use href="./images/icons.svg#icon-close"></use>
 				</svg>
 			</button>
-			<p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
-			<form class="modal-form" autocomplete="off">
+			<p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
+			<form class="form" autocomplete="off">
 
-				<label class="form-field">
-					<span class="form-label">Ім'я</span>
+				<label class="form__field">
+					<span class="form__label">Ім'я</span>
 					<div class="input-wrapper">
-						<input class="form-input" type="text" name="userName">
-						<svg class="form-icon" width="18" height="18">
+						<input class="form__input" type="text" name="userName">
+						<svg class="form__icon" width="18" height="18">
 							<use href="./images/icons.svg#icon-person-form"></use>
 						</svg>
 					</div>
 				</label>
 
-				<label class="form-field">
-					<span class="form-label">Телефон</span>
+				<label class="form__field">
+					<span class="form__label">Телефон</span>
 					<div class="input-wrapper">
-						<input class="form-input" type="tel" name="tel">
-						<svg class="form-icon" width="18" height="18">
-							<use href="./images/icons.svg#contacts__icon-form"></use>
+						<input class="form__input" type="tel" name="tel">
+						<svg class="form__icon" width="18" height="18">
+							<use href="./images/icons.svg#icon-phone-form"></use>
 						</svg>
 					</div>
 				</label>
 
-				<label class="form-field">
-					<span class="form-label">Пошта</span>
+				<label class="form__field">
+					<span class="form__label">Пошта</span>
 					<div class="input-wrapper">
-						<input class="form-input" type="email" name="email">
-						<svg class="form-icon" width="18" height="18">
+						<input class="form__input" type="email" name="email">
+						<svg class="form__icon" width="18" height="18">
 							<use href="./images/icons.svg#icon-email-form"></use>
 						</svg>
 					</div>
 				</label>
 
-				<label class="form-comment-field">
-					<span class="form-label">Коментар</span>
-					<textarea class="form-textarea" name="comment" rows="10" placeholder="Введіть текст"></textarea>
+				<label class="form__comment-field">
+					<span class="form__label">Коментар</span>
+					<textarea class="form__textarea" name="comment" rows="10" placeholder="Введіть текст"></textarea>
 				</label>
 
-				<label class="form-policy-field">
-					<input class="form-checkbox" type="checkbox" name="policy">
-					<svg class="checkbox-icon" width="16" height="15">
+				<label class="form__policy-field">
+					<input class="form__checkbox" type="checkbox" name="form__policy">
+					<svg class="form__checkbox-icon" width="16" height="15">
 						<use href="./images/icons.svg#icon-checkbox"></use>
 					</svg>
-					<span class="policy">
+					<span class="form__policy-text">
 						Погоджуюся з розсилкою та приймаю
-						<a class="policy-link" href="#">Умови договору</a>
+						<a class="form__policy-link" href="#">Умови договору</a>
 					</span>
 				</label>
 
-				<button class="modal-submit" type="submit">Відправити</button>
+				<button class="form__submit" type="submit">Відправити</button>
 
 			</form>
 		</div>
