--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
+		crossorigin="anonymous" referrerform__policy="no-referrer" />
 
 	<link rel="stylesheet" href="./css/nullstyle.css">
 
@@ -278,31 +278,32 @@
 	</main>
 
 	<footer class="footer">
-		<div class="container footer-wrapper">
+		<div class="container footer__container">
 			<div class="footer-contacts">
-				<a class="logo" href="./index.html" lang="en">Web<span>Studio</span></a>
-				<address class="footer-address">
-					<ul class="footer-list">
-						<li class="footer-item">
-							<a class="footer-map-address link" href="https://goo.gl/maps/5xT6Rg2jsyuAcH8N7"
+				<a class="logo footer__logo" href="./index.html" lang="en">Web<span
+						class="logo__span logo__span--white">Studio</span></a>
+				<address class="address">
+					<ul class="address-list">
+						<li class="address__item">
+							<a class="address__map-link link" href="https://goo.gl/maps/5xT6Rg2jsyuAcH8N7"
 								target="_blank" rel="noopener noreferrer nofollow">
 								м. Київ, пр-т Лесі Українки, 26
 							</a>
 						</li>
-						<li class="footer-item">
-							<a class="footer-link link" href="mailto:info@devstudio.com" lang="en">
+						<li class="address__item">
+							<a class="address__link link" href="mailto:info@devstudio.com" lang="en">
 								info@devstudio.com
 							</a>
 						</li>
-						<li class="footer-item">
-							<a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+						<li class="address__item">
+							<a class="address__link link" href="tel:+380961111111">+38 096 111 11 11</a>
 						</li>
 					</ul>
 				</address>
 			</div>
 			<div class="footer-social">
-				<p class="social-title">приєднуйтесь</p>
-				<ul class="footer-social">
+				<p class="footer-social__title">приєднуйтесь</p>
+				<ul class="footer-social__list">
 					<li class="footer-social__item">
 						<a class="footer-social__link" href="#" rel="noopener noreferrer nofollow">
 							<svg class="footer-social__icon" width="20" height="20">
@@ -334,12 +335,12 @@
 				</ul>
 			</div>
 			<form class="footer-form" autocomplete="off">
-				<p class="footer-title">Підпишіться на розсилку</p>
+				<p class="footer-form__title">Підпишіться на розсилку</p>
 				<div class="form-wrapper">
-					<input class="footer-email" type="email" name="email" placeholder="E-mail">
-					<button class="footer-form-btn" type="submit">
-						<span>Підписатися</span>
-						<svg class="icon-send" width="24" height="24">
+					<input class="footer-form__input" type="email" name="email" placeholder="E-mail">
+					<button class="footer-form__btn" type="submit">
+						<span class="footer-form__span">Підписатися</span>
+						<svg class="footer-form__icon" width="24" height="24">
 							<use href="./images/icons.svg#icon-send"></use>
 						</svg>
 					</button>
