--- a/portfolio.html
+++ b/portfolio.html
@@ -62,34 +62,34 @@
 	</header>
 
 	<main class="portfolio-content">
-		<section class="portfolio-section">
+		<section class="portfolio">
 			<div class="container">
 				<h1 class="visually-hidden">Портфоліо</h1>
-				<ul class="portfolio-filter">
-					<li class="filter-item">
-						<button class="filter-button" type="button">Все</button>
+				<ul class="filter">
+					<li class="filter__item">
+						<button class="filter__button" type="button">Все</button>
 					</li>
-					<li class="filter-item">
-						<button class="filter-button" type="button">Веб-сайти</button>
+					<li class="filter__item">
+						<button class="filter__button" type="button">Веб-сайти</button>
 					</li>
-					<li class="filter-item">
-						<button class="filter-button" type="button">Додатки</button>
+					<li class="filter__item">
+						<button class="filter__button" type="button">Додатки</button>
 					</li>
-					<li class="filter-item">
-						<button class="filter-button" type="button">Дизайн</button>
+					<li class="filter__item">
+						<button class="filter__button" type="button">Дизайн</button>
 					</li>
-					<li class="filter-item">
-						<button class="filter-button" type="button">Маркетинг</button>
+					<li class="filter__item">
+						<button class="filter__button" type="button">Маркетинг</button>
 					</li>
 				</ul>
-				<ul class="portfolio-list">
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_1.jpg"
+				<ul class="cards">
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_1.jpg"
 									alt="ноутбук на якому показан сайт" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -98,19 +98,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Технокряк</h2>
-								<p class="portfolio-descrpt">Веб-сайт</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Технокряк</h2>
+								<p class="cards__descrpt">Веб-сайт</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_2.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_2.jpg"
 									alt="два чоловіка грають у баскетбол" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -119,19 +119,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
-								<p class="portfolio-descrpt">Дизайн</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Постер New Orlean vs Golden Star</h2>
+								<p class="cards__descrpt">Дизайн</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_3.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_3.jpg"
 									alt="логотип ресторану 'морська їжа'" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -140,19 +140,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Ресторан Seafood</h2>
-								<p class="portfolio-descrpt">Додаток</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Ресторан Seafood</h2>
+								<p class="cards__descrpt">Додаток</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_4.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_4.jpg"
 									alt="чорні комп'ютерні навушники" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -161,19 +161,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Проєкт Prime</h2>
-								<p class="portfolio-descrpt">Маркетинг</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Проєкт Prime</h2>
+								<p class="cards__descrpt">Маркетинг</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_5.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_5.jpg"
 									alt="біла та помаранжева коробочки" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -182,19 +182,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Проєкт Boxes</h2>
-								<p class="portfolio-descrpt">Додаток</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Проєкт Boxes</h2>
+								<p class="cards__descrpt">Додаток</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_6.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_6.jpg"
 									alt="монітор на якому показан сайт" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -203,19 +203,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Inspiration has no Borders</h2>
-								<p class="portfolio-descrpt">Веб-сайт</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Inspiration has no Borders</h2>
+								<p class="cards__descrpt">Веб-сайт</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_7.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_7.jpg"
 									alt="книжка на якій показан дизайн" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -224,19 +224,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Видання Limited Edition</h2>
-								<p class="portfolio-descrpt">Дизайн</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Видання Limited Edition</h2>
+								<p class="cards__descrpt">Дизайн</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_8.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_8.jpg"
 									alt="бірка з назвою проекту" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -245,19 +245,19 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Проект LAB</h2>
-								<p class="portfolio-descrpt">Маркетинг</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Проект LAB</h2>
+								<p class="cards__descrpt">Маркетинг</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="#">
-							<div class="portfolio-thumb">
-								<img class="portfolio-img" src="./images/portfolio/portfolio-list/img_9.jpg"
+					<li class="cards__item">
+						<a class="cards__link" href="#">
+							<div class="cards-thumb">
+								<img class="cards__img" src="./images/portfolio/portfolio-list/img_9.jpg"
 									alt="чоловік працює в додатку на ноутбуці" width="370">
-								<div class="portfolio-overlay">
-									<p class="portfolio-text">
+								<div class="cards-overlay">
+									<p class="cards-overlay__text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
 										Все
 										це
@@ -266,9 +266,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="border-basket">
-								<h2 class="portfolio-name">Growing Business</h2>
-								<p class="portfolio-descrpt">Додаток</p>
+							<div class="cards-wapper">
+								<h2 class="cards__name">Growing Business</h2>
+								<p class="cards__descrpt">Додаток</p>
 							</div>
 						</a>
 					</li>
