--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Технокряк</h2>
 								<p class="cards__descrpt">Веб-сайт</p>
 							</div>
@@ -119,7 +119,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Постер New Orlean vs Golden Star</h2>
 								<p class="cards__descrpt">Дизайн</p>
 							</div>
@@ -140,7 +140,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Ресторан Seafood</h2>
 								<p class="cards__descrpt">Додаток</p>
 							</div>
@@ -161,7 +161,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Проєкт Prime</h2>
 								<p class="cards__descrpt">Маркетинг</p>
 							</div>
@@ -182,7 +182,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Проєкт Boxes</h2>
 								<p class="cards__descrpt">Додаток</p>
 							</div>
@@ -203,7 +203,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Inspiration has no Borders</h2>
 								<p class="cards__descrpt">Веб-сайт</p>
 							</div>
@@ -224,7 +224,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Видання Limited Edition</h2>
 								<p class="cards__descrpt">Дизайн</p>
 							</div>
@@ -245,7 +245,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Проект LAB</h2>
 								<p class="cards__descrpt">Маркетинг</p>
 							</div>
@@ -266,7 +266,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="cards-wapper">
+							<div class="cards-wrapper">
 								<h2 class="cards__name">Growing Business</h2>
 								<p class="cards__descrpt">Додаток</p>
 							</div>
