--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,7 @@
 		integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
 		crossorigin="anonymous" referrerform__policy="no-referrer" />
 
-	<link rel="stylesheet" href="./css/nullstyle.css">
-
-	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="./css/portfolio.min.css">
 </head>
 
 <body>
